--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,6 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/clauspruefer/python-db-pool"
-Issues = "https://github.com/clauspruefer/python-db-pool/issues"
+Homepage = "https://github.com/clauspruefer/python-dbpool"
+Issues = "https://github.com/clauspruefer/python-dbpool/issues"
+Documentation = "https://pythondocs.webcodex.de/pgdbpool"
