--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pgdbpool"
-version = "0.98rc1"
+version = "0.99"
 authors = [
   { name="Claus Prüfer", email="pruefer@webcodex.de" },
 ]
