--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pgdbpool"
-version = "1.0rc1"
+version = "1.0"
 authors = [
   { name="Claus Prüfer", email="pruefer@webcodex.de" },
 ]
 description = "A tiny database de-multiplexer primarily scoped for Web- / Application Server."
-readme = "README.md"
+readme = "./README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
