--- a/example/01-logical-replication/sysconfig.json
+++ b/example/01-logical-replication/sysconfig.json
@@ -39,7 +39,8 @@
                                     "end": 253
                                 }
                             }
-                        ]
+                        ],
+                        "parent": null
                     },
                     "permissions": {
                         "SYSOwner": "admin"
