--- a/example/01-logical-replication/sysconfig.json
+++ b/example/01-logical-replication/sysconfig.json
@@ -46,8 +46,8 @@
                         "SYSOwner": "admin"
                     },
                     "scale": {
-                        "min-nodes": 2,
-                        "max-nodes": 8,
+                        "min_nodes": 2,
+                        "max_nodes": 8,
                         "metrics": {
                             "characteristics": "default"
                         }
